--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-*       @Yalz @rorlic @tomvda @sverholen @WLefever-Cegeka @pj-cegeka
+*       @Yalz @rorlic @tomvda @sverholen @WLefever-Cegeka @pj-cegeka @Tomvbe
 
